5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1616_2923.log
== TEST (2019-04-01 15:16:53) 
-- CODE:
Qi = 1.500
t = 36 
j = float(input("digite uma taxa: "))

Qf = Qi * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:17:06) 
-- CODE:
Qi = 1.500
t = 36 
j = float(input("digite uma taxa: "))

Qf = Qi * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.163862
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365.5
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39.35
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138.73
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:17:48) 
-- CODE:
Qi = 1.500
t = 36 
j = float(input("digite uma taxa: "))

Qf = Qi * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:18:16) 
-- CODE:
Qi = 1.500
t = 36 
j = float(input("digite uma taxa: "))

Qf = Qi * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.16214
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365.5
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39.35
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138.73
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:28) 
-- CODE:
j = float(input("digite uma taxa: "))
Qi = 1.500
t = 36 

Qf = Qi * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:20:34) 
-- CODE:
j = float(input("digite uma taxa: "))
Qi = 1.500
t = 36 

Qf = Qi * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.181507
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365.5
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39.35
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138.73
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:34) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:21:44) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.124067
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365.5
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39.35
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138.73
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:23:39) 
-- CODE:
"x**(y)" = float(input("digite uma taxa: "))
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- ERROR:
File "XXXX", line 1
    "x**(y)" = float(input())
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:24:40) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:24:52) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:57) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.150019
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365.5
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39.35
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138.73
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:25:02) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:25:14) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.149458
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365.5
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39.35
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138.73
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:25:42) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:25:47) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.187884
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365.5
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39.35
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138.73
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:25:59) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:00) 
-- CODE:
j = float(input("digite uma taxa: "))
j = "x ** (y)"
Qo = 1.500
t = 36 


Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    Qf = Qo * (1 + j) ** t
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:32) 
-- CODE:
j = float(input("digite uma taxa: "))
j = "x ** (y)"
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Qf = Qo * (1 + j) ** t
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:55) 
-- CODE:
j = float(input("digite uma taxa: "))
j = "x ** (y)"
Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Qf = Qo * (1 + j) ** t
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:33:02) 
-- CODE:
j = float(input("digite uma taxa: "))

Qo = 1.500
t = 36 

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:39:22) 
-- CODE:
j = float(input("digite uma taxa: "))

Qo = 1.500
t = 3

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
3.22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:39:38) 
-- CODE:
j = float(input("digite uma taxa: "))

Qo = 1.500
t = 3

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
3.22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:40:51) 
-- CODE:
j = float(input("digite uma taxa: "))

Qo = 1.500
t = 3

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
3.22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:40:56) 
-- CODE:
j = float(input("digite uma taxa: "))

Qo = 1.500
t = 3

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
3.22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:41:01) 
-- CODE:
j = float(input("digite uma taxa: "))

Qo = 1.500
t = 3

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.216633
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
3.22
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
1.97
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
2.19
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:22) 
-- CODE:
j = float(input("digite uma taxa: "))
Qf = 46369.02
Qo = 1.500
t = 36

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:42:27) 
-- CODE:
j = float(input("digite uma taxa: "))
Qf = 46369.02
Qo = 1.500
t = 36

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.16025
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365.5
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39.35
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138.73
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:43:46) 
-- CODE:
j = float(input("digite uma taxa: "))

Qo = 1.500
t = 36

input(Qf = Qo * (1 + j) ** t)

print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    input(Qf = Qo * (1 + j) ** t)
TypeError: input() takes no keyword arguments
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:44:00) 
-- CODE:
j = float(input("digite uma taxa: "))

Qo = 1.500
t = 36

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:44:07) 
-- CODE:
j = float(input("digite uma taxa: "))

Qo = 1.500
t = 36

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.17274
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365.5
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39.35
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138.73
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:46:48) 
-- CODE:
j = input("digite uma taxa: ")

Qo = 1.500
t = 36

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Qf = Qo * (1 + j) ** t
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:49:10) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = float(input("digite o capital inicial: "))
t = float(input("digite os meses: "))

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qo = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:49:23) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = float(input("digite o capital inicial: "))
t = float(input("digite os meses: "))

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.150957
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2923/main.py", line 2, in <module>
    Qo = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:50:17) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = float(input("digite o capital inicial: "))
t = float(input("digite os meses: "))

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qo = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:50:31) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = float(input("digite o capital inicial: "))
t = float(input("digite os meses: "))

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qo = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:50:51) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = float(input("digite o capital inicial: "))
t = float(input("digite os meses: "))

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qo = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:51:10) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = float(input("digite o capital inicial: "))
t = float(input("digite os meses: "))

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.13455
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2923/main.py", line 2, in <module>
    Qo = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:51:16) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = float(input("digite o capital inicial: "))
t = float(input("digite os meses: "))

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qo = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:51:38) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = float(input("digite o capital inicial: "))
t = float(input("digite os meses: "))

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.13755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2923/main.py", line 2, in <module>
    Qo = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:51:43) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = float(input("digite o capital inicial: "))
t = float(input("digite os meses: "))

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qo = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:52:11) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = float(input("digite o capital inicial: "))
t = float(input("digite os meses: "))

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.145095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2923/main.py", line 2, in <module>
    Qo = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:52:16) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = float(input("digite o capital inicial: "))
t = float(input("digite os meses: "))

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qo = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:53:14) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = 1500
t = 36

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- OUTPUT:
14365502.76
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:53:26) 
-- CODE:
j = float(input("digite uma taxa: "))
Qo = 1500
t = 36

Qf = Qo * (1 + j) ** t

print(round(Qf, 2))
-- EXECUTION TIME:
0.24009
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365502.76
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39354.97
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138727.07
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
